  * Fixed handling of failing to open logfiles
  * Fixed client-PING reply
  * Fixed quicklog with timestamps in the beginning and qlogflush set to false
  * Fixed not replaying quicklog if not on any channel
  * Fixed issue with channel flag 'O'
  * Parted channels are no longer joined at attach if they have no qlog
    and flushqlog is set to FALSE.
  * Allow CTCP-reply right after start-up to keep some services happy
  * Call setvbuf only if statelog is enabled
  * stdout is no longer redirected in a file we cannot write to
  * miau no longer creates LOGDIR if logging isn't compiled in or used
  * Fixed buffer size in irc.c:irc_notice
  * Free forwardmsg in miauc.c:escape
  * Free memory if bind() fails (which causes miau to quit)
  * Fixed one-byte memory leak with logsuffix
  * Warn about failing to open a logfile. Not too often, though.
  * Added an option to define time between forwardmsg commits
  * Fixed rpl_malloc/rpl_realloc handling
  * Changed hstrerror-handling
  * Fixed getopt
  * Optimized using va_lists in irc.c
  * Realloc-optimization in channels.c, automode.c
  * Changed logpostfix into logsuffix
  * Code cleanup (yes, it was a horrible mess and it's still a horrible mess)


0.6.0.2

  * Hopefully fix problems configure switches for once and for all.
  * Fix quicklog timestamping.
  * Change quicklog to use list.[ch] instead of obsolete llist.[ch]


0.6.0.1

  * Don't compile irc.c with DEBUG by default :-P


0.6.0 - "only 18446744073709551615 bugs remaining"

  * Security review. Secured tons of sprintfs and strcats.
  * Option "autoaway" to define when to set user away if ever
  * Option "chandiscon" to define what to do with channels when server
    drops the connection
  * Option not to redirect stdout into logfile
  * miau should finally get along with safe channels (#1245923)
  * "miau" no longer thinks it was kicked off a channel when "miau_" is kicked
  * Fix searching for channels
  * Changed ignore-list to be case insensitive