@@ -1,7 +1,5 @@
 Bugs:
 
-- Trouble with FreeBSD. I guess I misuse select(). Will look at it later.
-
 - QUIT is logged on every channel (ok fine it's a feature)
 
 - If server changes user's nick, miau doesn't try to get it back!?
