@@ -10,6 +10,8 @@
   * Fixed issue with channel flag 'O'
   * Parted channels are no longer joined at attach if they have no qlog
     and flushqlog is set to FALSE.
+  * miau again accepts commands when connection to the server is lost
+  * Reply to PART and JOIN when not connected to the server
   * Allow CTCP-reply right after start-up to keep some services happy
   * Call setvbuf only if statelog is enabled
   * stdout is no longer redirected in a file we cannot write to
